# cpc

./: .gitignore  Cargo.toml  KNOWN_LIMITS-zh.md  KNOWN_LIMITS.md  LICENSE  README-zh.md  README.md  codecov.yml  formal-proof.md  paper.md
.github/workflows/: ci.yml
benches/: benchmark.rs  results.txt
docs/: comparison.md  cpc-flow.html  design.md  parameters.md  security-parameters.md
examples/: credential.rs
scripts/: lattice_estimator_cpc.sage
src/: commitment.rs  gauss.rs  lib.rs  merkle.rs  params.rs  prove.rs  ring.rs  ring_ct.rs  verify.rs
tests/: correctness.rs  coverage_gaps.rs  ct_tests.rs  integration.rs  security.rs  serialization.rs
