[package]
name = "cpc"
version = "0.1.0"
edition = "2021"
authors = ["CPC Project"]
license = "MIT"
description = "Constrained Path Commitment: a post-quantum primitive for selectively disclosing structured paths with zero-knowledge shortness proofs"
repository = "https://github.com/zevblif/cpc"
keywords = ["cryptography", "post-quantum", "lattice", "zero-knowledge", "commitment"]
categories = ["cryptography"]
readme = "README.md"
exclude = ["/.skills", "/Documents"]

[lib]
name = "cpc"
path = "src/lib.rs"

[dependencies]
sha3 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ed25519-dalek = "2"
rand = { version = "0.8", features = ["std_rng"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
